--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/* ========================================
+/* ======================================== */
    GLOBAL RESET & CURSOR SYSTEM
-   ======================================== */
 * {
     margin: 0;
     padding: 0;
@@ -854,5 +853,6 @@ body {
     }
 
 }
+
 
 
