--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ body {
     backdrop-filter: blur(10px);
     max-width: 320px;
     width: 100%;
+    filter: brightness(0.8);
     margin-top: 16px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
@@ -663,6 +664,7 @@ body {
     width: 100%;
     margin-top: 16px;
     backdrop-filter: blur(10px);
+    filter: brightness(0.8);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     animation: fadeIn 1s ease-out 1.3s both;
     transition: all 0.3s ease;
@@ -853,6 +855,7 @@ body {
     }
 
 }
+
 
 
 
