--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-/* ======================================== */
+/* ========================================
    GLOBAL RESET & CURSOR SYSTEM
+*/
 * {
     margin: 0;
     padding: 0;
@@ -855,6 +856,7 @@ body {
     }
 
 }
+
 
 
 
