--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* ========================================
+/* ======================================== */
    GLOBAL RESET & CURSOR SYSTEM
-*/
+
 * {
     margin: 0;
     padding: 0;
@@ -842,6 +842,7 @@ body {
     }
 
 }
+
 
 
 
