--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* ========================================
-   GLOBAL RESET & CURSOR SYSTEM
-*/
+/* ======================================== */
+   /*GLOBAL RESET & CURSOR SYSTEM*/
+
 * {
     margin: 0;
     padding: 0;
@@ -856,3 +856,4 @@ body {
     }
 
 }
+
