--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* ======================================== 
-   GLOBAL RESET & CURSOR SYSTEM*/
+/* ======================================== */
+  /* GLOBAL RESET & CURSOR SYSTEM*/
 
 * {
     margin: 0;
@@ -856,6 +856,7 @@ body {
     }
 
 }
+
 
 
 
